Issue 128:	Add a function to initialize setting each tab.
Update issue 128
Status: Fixed
Fix that widget moved to other tab does not back to origin tab.

git-svn-id: https://infoscoop.googlecode.com/svn/trunk@290 d4e23b88-c782-11de-b6dc-25c59a28ecba